@@ -1,3 +1,7 @@
+1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Makefile.am (CPPFLAGS): Add -Dextern=@EXPORT_EXTERN@.
+
 1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (libobjc.dll): New rule.
